--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
+    "hover.css": "^2.3.2",
     "mongodb": "^3.2.7"
   }
 }
