--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "userregistration",
+  "name": "codefiner_expense-tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "expense tracker for users",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/attainu-falcon/codefiner_expense-tracker.git"
+  },
+  "author": "Abhishek Mazumdar, Ajay Chakravarthy, Alok Hazarika",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/attainu-falcon/codefiner_expense-tracker/issues"
+  },
+  "homepage": "https://github.com/attainu-falcon/codefiner_expense-tracker#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "express-session": "^1.16.2",
-    "hover.css": "^2.3.2",
     "mongodb": "^3.2.7"
   }
 }
