--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/attainu-falcon/codefiner_expense-tracker#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mongodb": "^3.2.7"
+    "express-session": "^1.16.2",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.3"
   }
 }
